# JMemory

./: .gitignore  CMakeLists.txt  README.md
include/JMemory/: Allocator.h  LinearAllocator.h
tests/: LinearAllocatorTest.cpp
